// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay should call render content if the overlay content re-renders 1`] = `
<body
  class="dxp"
>
  <div>
    <button
      aria-haspopup="true"
      class=""
    >
      trigger
    </button>
  </div>
  <div
    class="overlay-content-root"
    data-testid="overlay"
    id="overlay2"
    role="dialog"
    style="top: 0px; left: 0px; transform: translateY(8px);"
  >
    <div
      class="content"
    >
      bar
    </div>
  </div>
</body>
`;

exports[`Overlay should render the trigger 1`] = `
<body
  class="dxp"
>
  <div>
    <button
      aria-haspopup="true"
      class=""
    >
      trigger
    </button>
  </div>
</body>
`;

exports[`Overlay should stay active if a click occurs in a nested overlay 1`] = `
<div>
  <button
    aria-haspopup="true"
    class=""
  >
    trigger
  </button>
</div>
`;
